--- a/client/src/index.html
+++ b/client/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>PdcStore</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.0/css/foundation.css">
+  <link href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
